   problem and providing a test case!
 * Fix problem in `Translator` filter that would cause the translation of
   text nodes to fail if the translation function returned an object that was
   not directly a string, but rather something like an instance of the
   `LazyProxy` class in Babel (ticket #145).
 * Fix problem with match templates incorrectly being applied multiple times.


Version 0.5
http://svn.edgewall.org/repos/genshi/tags/0.5.0/
(Jun 9 2008, from branches/stable/0.5.x)

 * Added #include directive for text templates (ticket #115).
 * Added new markup transformation filter contributed by Alec Thomas. This
   provides gorgeous jQuery-inspired stream transformation capabilities based
   on XPath expressions.
 * When using HTML or XHTML serialization, the `xml:lang` attribute is
   automatically translated to the `lang` attribute which HTML user agents
   understand.
 * Added support for the XPath 2 `matches()` function in XPath expressions,
   which allow matching against regular expressions.
 * Support for Python code blocks in templates can now be disabled
   (ticket #123).
 * Includes are now processed when the template is parsed if possible, but
   only if the template loader is not set to do automatic reloading. Included
   templates are basically inlined into the including template, which can
   speed up rendering of that template a bit.
 * Added new syntax for text templates, which is more powerful and flexible
   with respect to white-space and line breaks. It also supports Python code
   blocks. The old syntax is still available and the default for now, but in a
   future release the new syntax will become the default, and some time after
   that the old syntax will be removed.
 * Added support for passing optimization hints to `<py:match>` directives,
   which can speed up match templates in many cases, for example when a match
   template should only be applied once to a stream, or when it should not be
   applied recursively.